--- a/Fable/Fable.csproj
+++ b/Fable/Fable.csproj
@@ -183,12 +183,17 @@
     <Compile Include="Migrations\201411170002361_AddedApplication.Designer.cs">
       <DependentUpon>201411170002361_AddedApplication.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502220257214_AddedApplicationNavProperty.cs" />
+    <Compile Include="Migrations\201502220257214_AddedApplicationNavProperty.Designer.cs">
+      <DependentUpon>201502220257214_AddedApplicationNavProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Absence.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Application.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Roles.cs" />
     <Compile Include="Models\School.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -283,6 +288,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201411170002361_AddedApplication.resx">
       <DependentUpon>201411170002361_AddedApplication.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502220257214_AddedApplicationNavProperty.resx">
+      <DependentUpon>201502220257214_AddedApplicationNavProperty.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
