--- a/Fable/Fable.csproj
+++ b/Fable/Fable.csproj
@@ -187,8 +187,13 @@
     <Compile Include="Migrations\201502220257214_AddedApplicationNavProperty.Designer.cs">
       <DependentUpon>201502220257214_AddedApplicationNavProperty.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201502261515390_AddedAbsenceState.cs" />
+    <Compile Include="Migrations\201502261515390_AddedAbsenceState.Designer.cs">
+      <DependentUpon>201502261515390_AddedAbsenceState.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Absence.cs" />
+    <Compile Include="Models\AbsenceState.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Application.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -291,6 +296,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201502220257214_AddedApplicationNavProperty.resx">
       <DependentUpon>201502220257214_AddedApplicationNavProperty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201502261515390_AddedAbsenceState.resx">
+      <DependentUpon>201502261515390_AddedAbsenceState.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
